tp_generator: added exercise generation logic, fixed dbLoader and ignored it in SpringBootApplication